--- a/public/games/sample-game/index.html
+++ b/public/games/sample-game/index.html
@@ -44,6 +44,7 @@
         <h1>Click the Squares</h1>
         <div class="score">Score: <span id="score">0</span></div>
         <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <button id="fullscreenBtn" onclick="toggleFullscreen()">⛶ Fullscreen</button>
         <div class="instructions">Click the red squares as they appear! Each click = +1 point</div>
     </div>
 
@@ -90,6 +91,19 @@
         function gameLoop() {
             drawBackground();
             drawTarget();
+        }
+
+        // Fullscreen functionality
+        function toggleFullscreen() {
+            if (!document.fullscreenElement) {
+                document.documentElement.requestFullscreen().catch(err => {
+                    console.log('Error attempting to enable fullscreen:', err);
+                });
+            } else {
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                }
+            }
         }
 
         randomPosition();
